--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main class="flex flex-col p-8">
 
         <!-- componente de balance -->       
-        <section id="balance-component" class="">
+        <section id="balance-component" class="hidden">
 
             <!-- contenedor de card balance y filtros --> 
             <div>
@@ -159,7 +159,7 @@
                 </div>
 
                 <!-- planel cuando no hay  operaciones -->
-                <div class="h-96 hidden">
+                <div class="h-96 ">
                     <div class="h-72 flex justify-center mb-8">
                         <img class="h-full" src="./assets/svg/no-hay-operaciones.svg" alt="">
                     </div>
@@ -170,7 +170,7 @@
                 </div>
 
                 <!-- panel cuando hay operaciones operaciones -->
-                <div class="">
+                <div class="hidden">
 
                     <!-- titúlos tabla -->
                     <div class="hidden">
@@ -212,41 +212,41 @@
         </section>
 
         <!-- componente para agregar operación, va conectado al boton +operacion del panel de Balance-->   
-        <section id="agregar-operacion-componente">
+        <section id="agregar-operacion-componente" class="h-fit shadow-lg bg-amarilloClaro rounded-lg p-8 my-8 overflow-hidden">
 
                 <!-- titulo --> 
-                <div>
-                    <h1>Nueva Operación</h1>
+                <div class="mb-8">
+                    <h1 class="text-3xl font-bold">Nueva Operación</h1>
                 </div>
                 
                 <!-- formulario para ingreso de operaciones -->
                 <form action="">
 
                     <!-- input para describir el tipo de operacion -->
-                    <div>
-                        <label for="">Descripción</label>
-                        <input type="text">
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2" for="">Descripción</label>
+                        <input  type="text" class="h-10 rounded-lg border-rojo border px-4">
                     </div>
 
                     <!-- input para ingresar el monto -->
-                    <div>
-                        <label for="">Monto</label>
-                        <input type="number">
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2" for="">Monto</label>
+                        <input type="number" class="h-10 rounded-lg border-rojo border px-4">
                     </div>
 
                     <!-- input para seleccionar el tipo de gasto -->
-                    <div>
-                        <label for="">Monto</label>
-                        <select name="" id="">
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2" for="">Tipo</label>
+                        <select name="" id="" class="h-10 rounded-lg border-rojo border px-4">
                             <option value="Gasto">Gasto</option>
                             <option value="Ganancia">Ganancia</option>
                         </select>
                     </div>
 
                     <!-- input para seleccionar la categoria del gasto -->
-                    <div>
-                        <label for="">Monto</label>
-                        <select name="" id="">
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2" for="">Categoria</label>
+                        <select name="" id="" class="h-10 rounded-lg border-rojo border px-4">
                             <option value="comida">Comida</option>
                             <option value="servicios">Servicios</option>
                             <option value="educacion">Educación</option>
@@ -257,15 +257,15 @@
                     </div>
 
                     <!-- input para ingresar la fecha-->
-                    <div>
-                        <label for="">Fecha</label>
-                        <input type="date">
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2" for="">Fecha</label>
+                        <input type="date" class="h-10 rounded-lg border-rojo border px-4">
                     </div>
 
                     <!-- input botones-->
-                    <div>
-                        <input type="submit" value="enviar">
-                        <input type="submit" value="cancelar">
+                    <div class="flex mt-8 gap-4 justify-end">
+                        <input type="submit" value="enviar" class='py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500  hover:bg-rojo'>
+                        <input type="submit" value="cancelar" class='py-2.5 px-6 text-sm bg-rojo text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-azul'>
                     </div>
 
                 </form>
