--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <!-- componente de menu-->  
     <header>
 
-        <nav class="flex flex-col">
+        <nav class="flex flex-col lg:flex-row lg:bg-azul">
             <!-- logo--> 
             <div class="h-24 flex justify-between px-8 bg-azul w-screen items-center">
                 <div class="h-12 w-2/5 flex">
                         <img class="h-full cursor-pointer" src="./assets/svg/logo.svg" alt="">
                 </div>
     
-                <div class="h-12 w-3/5 flex justify-end items-center">
+                <div class="h-12 w-3/5 flex justify-end items-center lg:hidden">
                     <img id="menu-icon-mobile" class="h-2/3 cursor-pointer"  src="./assets/svg/menu.svg" alt="">
                 </div>
             </div>
 
-            <div id="container-menu-buttons" class="h-fit px-8 pt-6 bg-amarilloClaro flex flex-col rounded-b-xl hidden">
+            <div id="container-menu-buttons" class="h-fit px-8 pt-6 bg-amarilloClaro flex flex-col rounded-b-xl lg:w-2/3 lg:flex-row lg:bg-transparent lg:justify-end lg:gap-4">
                 <button id="balance-button" class="mb-4 h-10 py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-rojo">Balance</button>
                 <button id="categoria-button" class="mb-4 h-10 py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-rojo">Categoria</button>
                 <button id="reporte-button" class="mb-4 h-10 py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-rojo">Reporte</button>
@@ -93,13 +93,13 @@
                    <div class="flex justify-between mb-8">
                        <h2 class="text-2xl font-bold">Filtros</h2>
                        <span>
-                           <a href="">Ocultar filtros</a>
+                           <a id="ocultar-filtros" href="">Ocultar filtros</a>
                        </span>
                        
                    </div>
    
                    <!-- formulario para agregar filtros --> 
-                   <form action="">
+                   <form id="form-filtros" class="flex flex-col" action="">
    
                        <!-- input desplegable por tipo -->
                        <div class="flex flex-col mb-4">
@@ -159,7 +159,7 @@
                 </div>
 
                 <!-- planel cuando no hay operaciones -->
-                <div class="h-96 ">
+                <div class="h-fit ">
                     <div class="h-72 lg:h-96 flex justify-center mb-8">
                         <img class="h-full" src="./assets/svg/no-hay-operaciones.svg" alt="">
                     </div>
