se organizan W de componentes princiales en el breakpoint lg

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
 
     <!-- secciones y componentes-->  
-    <main class="flex flex-col p-8">
+    <main class="flex flex-col p-8 lg:mx-48">
 
         <!-- componente de balance -->       
         <section id="balance-componente" class="flex flex-col lg:flex-row">
