se anade margin al nav en el bk lg

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <nav class="flex flex-col lg:flex-row lg:bg-azul">
             <!-- logo--> 
-            <div class="h-24 flex justify-between px-8 bg-azul w-screen items-center">
+            <div class="h-24 flex justify-between px-8 bg-azul w-screen items-center lg:mx-48">
                 <div class="h-12 w-2/5 flex">
                         <img class="h-full cursor-pointer" src="./assets/svg/logo.svg" alt="">
                 </div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <div id="container-menu-buttons" class="h-fit px-8 pt-6 bg-amarilloClaro flex flex-col rounded-b-xl lg:w-2/3 lg:flex-row lg:bg-transparent lg:justify-end lg:gap-4">
+            <div id="container-menu-buttons" class="h-fit px-8 pt-6 bg-amarilloClaro flex flex-col rounded-b-xl lg:w-2/3 lg:flex-row lg:bg-transparent lg:justify-end lg:gap-4 lg:mx-48">
                 <button id="balance-button" class="mb-4 h-10 py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-rojo">Balance</button>
                 <button id="categoria-button" class="mb-4 h-10 py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-rojo">Categoria</button>
                 <button id="reporte-button" class="mb-4 h-10 py-2.5 px-6 text-sm bg-azul text-white rounded-full cursor-pointer font-semibold text-center shadow-xs transition-all duration-500 hover:bg-rojo">Reporte</button>
