--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                            <select id="filter-sort" class="h-10 rounded-lg border-rojo border px-4" name="" id="">
                                <option value="mas-reciente">Más reciente</option>
                                <option value="menos-reciente">Menos reciente</option>
-                               <option value="mayor-monto">Mayor Monto</option>
-                               <option value="menor-monto">Menor Monto</option>
-                               <option value="descendiente">A/Z</option>
-                               <option value="ascendente">Z/A</option>
+                               <option value="mayor-monto">Mayor monto</option>
+                               <option value="menor-monto">Menor monto</option>
+                               <option value="ascendente">A/Z</option>
+                               <option value="descendente">Z/A</option>
                            </select>
                        </div>
                        
